tests/fw_rules_tests/policies/test6-networkpolicy.yaml

### First policy
### The policy defines traffic within the namespace kube-system-new.
### The possible app in the namespace are ibm-file-plugin, ibm-keepalived-watcher, ibm-kube-fluentd, ibm-storage-watcher, helm and vpn
### This policy allows traffic within namespace kube-system-new only from pods in the namespace and with app in {ibm-kube-fluentd, ibm-storage-watcher, helm, vpn}


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-app-in-predefined
  namespace: kube-system-new
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchExpressions:
            - key: app
              operator: In
              values:
                - ibm-kube-fluentd
                - ibm-storage-watcher
                - helm
                - vpn
